fix: looks of header on mobile

--- a/src/components/Resizable/Resizable.css
+++ b/src/components/Resizable/Resizable.css
@@ -1,6 +1,6 @@
 .resizable {
   position: relative;
-  height: calc(100vh - var(--header-height));
+  height: calc(100svh - var(--header-height));
   width: 100vw;
   display: flex;
 }
